book a trip page css ok + carousel z-index fix

--- a/frontend/src/styles/book-a-trip-page.scss
+++ b/frontend/src/styles/book-a-trip-page.scss
@@ -14,8 +14,12 @@
   .container-left {
     display: flex;
     flex-direction: column;
+    gap: 30px;
     @media screen and (min-width: $bp-desktop-large) {
       flex-grow: 0.7;
+    }
+    .trip-card {
+      width: auto;
     }
   }
   .container-right {
